Adapted to deploying

--- a/front/addProduct/index.html
+++ b/front/addProduct/index.html
@@ -14,10 +14,10 @@
     <input type="text" id="description"><br>
     <label for="price">Price:</label>
     <input type="number" id="price"><br>
-    <label for="headImage">Head image:</label>
+    <label for="file">Head image:</label>
     <input type="file" id="file"><br>
     <input type="button" value="Create" id="create">
     
-    <script src="/addProduct/index.js"></script>
+    <script src="/LogosShop/front/addProduct/index.js"></script>
 </body>
 </html>
