--- a/front/index.html
+++ b/front/index.html
@@ -47,7 +47,7 @@
             </li>
         </ul>
     </nav>
-    <script src="/index.js"></script>
+    <script src="/LogosShop/front/index.js"></script>
 </body>
 
 </html>
